fix(frontend): better area for advanced edition on small screens

--- a/frontend_lib/src/component/Timeline/CommentArea.styl
+++ b/frontend_lib/src/component/Timeline/CommentArea.styl
@@ -78,3 +78,9 @@ textarea
     &__submit
       display flex
       align-items center
+
+@media (max-width: max-xs)
+  .commentArea__textinput.richtextedition
+    height auto
+    & > .tox-tinymce
+      min-height 300px
